// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runs a basic smoke test 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                   Hello World                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests a complex pane setup 1`] = `
"left 1                                  │right 1            │right 2            
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
────────────────────────────────────────│                   │                   
left 3                                  │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
────────────────────────────────────────│───────────────────────────────────────
left 2                                  │right 3                                
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
"
`;

exports[`tests removing panes in a complex setup 1`] = `
"left 1                                  │right 1            │right 2            
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
────────────────────────────────────────│                   │                   
left 3                                  │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
────────────────────────────────────────│                   │                   
left 2                                  │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
"
`;

exports[`tests removing panes in a horizontal setup 1`] = `
"Left                                    │Right                                  
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
"
`;

exports[`tests removing panes in a vertical setup 1`] = `
"Up                                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
Down                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests switching panes in a complex setup 1`] = `
"left 1                                  │left 3             │right 2            
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
────────────────────────────────────────│                   │                   
right 1                                 │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
                                        │                   │                   
────────────────────────────────────────│───────────────────────────────────────
left 2                                  │right 3                                
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
"
`;

exports[`tests switching panes in a horizontal setup 1`] = `
"Left                                    │Right                                  
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
                                        │                                       
"
`;

exports[`tests switching panes in a vertical setup 1`] = `
"Up                                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
Down                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;

exports[`tests the horizontal layout with fixed size child 1`] = `
"Root                                    │┌─────────────────────────────────────┐
                                        ││Fixed                                │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        ││                                     │
                                        │└─────────────────────────────────────┘
"
`;

exports[`tests the horizontal splitting 1`] = `
"Right               │Center             │Right                                  
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
                    │                   │                                       
"
`;

exports[`tests the vertical layout with fixed size child 1`] = `
"Root                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│Fixed                                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`tests the vertical splitting 1`] = `
"Up                                                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
Center                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
Down                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
"
`;
